Updated composer.json description to better fit this project's goal

--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
-  "name": "lethalwire/composer-starter",
-  "description": "A basic composer starter that uses the PSR-4 specification.",
+  "name": "lethalwire/decorator-design-pattern",
+  "description": "A basic example which demonstrates the decorator design pattern..",
   "authors": [
     {
       "name": "CSTom",
